examples/k8stest/conf/Gateway/DynamicTest/updates/Gateway_dynamic-test_update.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dynamic-test-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
  # Listener 1:  hostname 
  - name: http-with-hostname
    port: 31250
    protocol: HTTP
    # hostname ， hostname
  # Listener 2: 
  - name: http-general
    port: 31251
    protocol: HTTP
